# psychic-octo-umbrella

./: .cache_ggshield  Número de Visitantes por Ciudad en España.html  README.md  app.py  chat.py  datos COVID19.html  datos_COVID19.html  main.py  pyproject.toml  requirements.txt  scrappe.py  show_pluvio.py  talk_to_llm.py
aemet_pluviometricas/: pluvio.parquet
templates/: index.html
